# FontStack

./: .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml  release.yml
docs/: api.rst  conf.py  index.rst  quickstart.rst  requirements.txt
examples/: README.md
examples/01_basic/: README.md  example.py
examples/02_weights/: README.md  example.py
examples/03_wrap/: README.md  example.py
examples/04_scale_to_fit/: README.md  example.py
examples/05_alignment/: README.md  example.py
examples/06_arabic/: README.md  example.py
examples/07_mixed/: README.md  example.py
examples/08_emoji/: README.md  example.py
examples/09_cjk/: README.md  example.py
examples/10_scripts/: README.md  example.py
examples/11_multilingual/: README.md  example.py
examples/12_symbols/: README.md  example.py
examples/13_fit_mode/: README.md  example.py
examples/14_outline/: README.md  example.py
examples/15_shadow/: README.md  example.py
examples/16_gradient/: README.md  example.py
examples/17_combined/: README.md  example.py
examples/18_gradient_angle/: README.md  example.py
examples/19_anchor/: README.md  example.py
src/fontstack/: __init__.py  _core.py  bidi.py  cmap.py  discovery.py  draw.py  gradient.py  manager.py  types.py
tests/: conftest.py  test_bidi.py  test_cmap.py  test_font_dir.py  test_font_manager.py  test_rendering.py
